--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -12,6 +12,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
+# Disabilita l'esecuzione di data.sql nei test
+# (i test usano H2 in-memory e non hanno bisogno di dati iniziali)
+spring.sql.init.mode=never
+spring.jpa.defer-datasource-initialization=false
+
 # Azure Storage Mock (non usato nei test unitari)
 azure.storage.connection-string=mock
 azure.storage.container-name=referti
