--- a/medsafe-frontend/.gitignore
+++ b/medsafe-frontend/.gitignore
@@ -1,48 +1,26 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# Compiled output
+# Angular Default
 /dist
 /tmp
 /out-tsc
 /bazel-out
+/.angular
 
 # Node
 /node_modules
 npm-debug.log
 yarn-error.log
 
-# IDEs and editors
+# IDE
 .idea/
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
+.vscode/
+*.swp
+*.swo
 
-# Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
-
-# System files
+# OS
 .DS_Store
 Thumbs.db
 
-# Environment files (sicurezza)
-.env
-.env.local
-.env.*.local
-
 # Azure
 .azure/
+*.publish.xml
+*.pubxml
