--- a/.github/workflows/main_medsafe-frontend.yml
+++ b/.github/workflows/main_medsafe-frontend.yml
@@ -24,16 +24,16 @@ jobs:
           node-version: '20.x'
 
       - name: npm install, build, and test
+        working-directory: ./medsafe-frontend
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build -- --configuration production
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: ./medsafe-frontend/dist/medsafe-frontend/browser
 
   deploy:
     runs-on: ubuntu-latest
