--- a/medsafe-backend/src/main/resources/application-azure.properties
+++ b/medsafe-backend/src/main/resources/application-azure.properties
@@ -36,7 +36,7 @@ spring.cloud.azure.active-directory.enabled=true
 # che cercava AZURE_CLIENT_ID per la Managed Identity
 spring.cloud.azure.active-directory.credential.client-id=${MEDSAFE_ENTRA_CLIENT_ID}
 spring.cloud.azure.active-directory.profile.tenant-id=${MEDSAFE_ENTRA_TENANT_ID}
-spring.cloud.azure.active-directory.app-id-uri=api://${MEDSAFE_ENTRA_CLIENT_ID}
+# spring.cloud.azure.active-directory.app-id-uri=api://${MEDSAFE_ENTRA_CLIENT_ID}
 
 # ==============================================================================
 # 5. LOGGING
