--- a/medsafe-backend/src/main/resources/application-azure.properties
+++ b/medsafe-backend/src/main/resources/application-azure.properties
@@ -41,6 +41,6 @@ spring.cloud.azure.active-directory.profile.tenant-id=${MEDSAFE_ENTRA_TENANT_ID}
 # ==============================================================================
 # 5. LOGGING
 # ==============================================================================
-logging.level.it.unisa.project.medsafe=INFO
+logging.level.it.unisa.project.medsafe=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.com.azure=WARN
