--- a/medsafe-backend/src/main/resources/application-azure.properties
+++ b/medsafe-backend/src/main/resources/application-azure.properties
@@ -38,6 +38,11 @@ spring.cloud.azure.active-directory.credential.client-id=${MEDSAFE_ENTRA_CLIENT_
 spring.cloud.azure.active-directory.profile.tenant-id=${MEDSAFE_ENTRA_TENANT_ID}
 # spring.cloud.azure.active-directory.app-id-uri=api://${MEDSAFE_ENTRA_CLIENT_ID}
 
+# Configurazione standard OAuth2 Resource Server per validazione JWT
+# 'common' permette l'accesso a qualsiasi tenant (Multi-tenant)
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://login.microsoftonline.com/common/v2.0
+# spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://login.microsoftonline.com/common/discovery/v2.0/keys
+
 # ==============================================================================
 # 5. LOGGING
 # ==============================================================================
