--- a/medsafe-backend/src/main/resources/application-azure.properties
+++ b/medsafe-backend/src/main/resources/application-azure.properties
@@ -49,3 +49,9 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=https://login.microsoftonli
 logging.level.it.unisa.project.medsafe=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.com.azure=WARN
+
+# ==============================================================================
+# 6. FILE UPLOAD CONFIGURATION (Fix per immagini mediche > 1MB)
+# ==============================================================================
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
