--- a/medsafe-backend/src/main/resources/application-azure.properties
+++ b/medsafe-backend/src/main/resources/application-azure.properties
@@ -32,16 +32,10 @@ spring.cloud.azure.keyvault.secret.endpoint=https://kv-medsafe-prod.vault.azure.
 # Configurazione automatica di Spring Cloud Azure per validare i token
 spring.cloud.azure.active-directory.enabled=true
 
-# Usiamo nomi custom per evitare conflitti con il driver SQL
-# che cercava AZURE_CLIENT_ID per la Managed Identity
 spring.cloud.azure.active-directory.credential.client-id=${MEDSAFE_ENTRA_CLIENT_ID}
 spring.cloud.azure.active-directory.profile.tenant-id=${MEDSAFE_ENTRA_TENANT_ID}
-# spring.cloud.azure.active-directory.app-id-uri=api://${MEDSAFE_ENTRA_CLIENT_ID}
 
-# Configurazione standard OAuth2 Resource Server per validazione JWT
-# 'common' permette l'accesso a qualsiasi tenant (Multi-tenant)
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://login.microsoftonline.com/common/v2.0
-# spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://login.microsoftonline.com/common/discovery/v2.0/keys
 
 # ==============================================================================
 # 5. LOGGING
@@ -49,9 +43,11 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=https://login.microsoftonli
 logging.level.it.unisa.project.medsafe=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.com.azure=WARN
-
+logging.level.org.springframework.security.oauth2=DEBUG
+logging.level.org.springframework.web=DEBUG
 # ==============================================================================
 # 6. FILE UPLOAD CONFIGURATION (Fix per immagini mediche > 1MB)
 # ==============================================================================
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+server.max-http-header-size=64KB
