--- a/medsafe-backend/src/main/resources/application-azure.properties
+++ b/medsafe-backend/src/main/resources/application-azure.properties
@@ -40,11 +40,11 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=https://login.microsoftonli
 # ==============================================================================
 # 5. LOGGING
 # ==============================================================================
-logging.level.it.unisa.project.medsafe=DEBUG
-logging.level.org.springframework.security=DEBUG
+logging.level.it.unisa.project.medsafe=INFO
+logging.level.org.springframework.security=WARN
 logging.level.com.azure=WARN
-logging.level.org.springframework.security.oauth2=DEBUG
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security.oauth2=WARN
+logging.level.org.springframework.web=WARN
 # ==============================================================================
 # 6. FILE UPLOAD CONFIGURATION (Fix per immagini mediche > 1MB)
 # ==============================================================================
