--- a/.github/workflows/main_medsafe-api.yml
+++ b/.github/workflows/main_medsafe-api.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'medsafe-backend/**'
   workflow_dispatch:
 
 jobs:
@@ -24,14 +26,15 @@ jobs:
           java-version: '21'
           distribution: 'microsoft'
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Build and test with Maven
+        working-directory: ./medsafe-backend
+        run: mvn clean install -Dspring.profiles.active=test
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: '${{ github.workspace }}/medsafe-backend/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
@@ -60,4 +63,3 @@ jobs:
           app-name: 'medsafe-api'
           slot-name: 'Production'
           package: '*.jar'
-          
